Fixing performances problem

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Useless Generator</title>
+  <title>Particles Generator</title>
 
   <link rel="stylesheet" href="./styles/css/main.css">
 
@@ -26,16 +26,16 @@
           <h3>Layer 1</h3>
 
           <label for="quantity-1">Quantity</label>
-          <input id="quantity-1" type="range" min="0" max="100" value="10">
+          <input id="quantity-1" type="range" min="0" max="100" value="30">
 
           <label for="opacity-1">Opacity</label>
-          <input id="opacity-1" type="range" min="1" max="100" value="95">
+          <input id="opacity-1" type="range" min="1" max="100" value="80">
 
           <label for="size-1">Size</label>
-          <input id="size-1" type="range" min="1" max="200" value="50">
+          <input id="size-1" type="range" min="1" max="200" value="55">
 
           <label for="speed-1">Speed</label>
-          <input id="speed-1" type="range" min="5" max="100" value="40">
+          <input id="speed-1" type="range" min="5" max="100" value="75">
 
           <label for="color-1">Color</label>
           <input id="color-1" class="color-input" type="color" value="#7c618f">
@@ -45,16 +45,16 @@
           <h3>Layer 2</h3>
 
           <label for="quantity-2">Quantity</label>
-          <input id="quantity-2" type="range" min="1" max="100" value="15">
+          <input id="quantity-2" type="range" min="1" max="100" value="30">
 
           <label for="opacity-2">Opacity</label>
-          <input id="opacity-2" type="range" min="1" max="100" value="95">
+          <input id="opacity-2" type="range" min="1" max="100" value="75">
 
           <label for="size-2">Size</label>
-          <input id="size-2" type="range" min="1" max="100" value="40">
+          <input id="size-2" type="range" min="1" max="100" value="60">
 
           <label for="speed-2">Speed</label>
-          <input id="speed-2" type="range" min="5" max="100" value="50">
+          <input id="speed-2" type="range" min="5" max="100" value="70">
 
           <label for="color-2">Color</label>
           <input id="color-2" class="color-input" type="color" value="#d6d6d6">
@@ -64,13 +64,13 @@
           <h3>Layer 3</h3>
 
           <label for="quantity-3">Quantity</label>
-          <input id="quantity-3" type="range" min="1" max="100" value="20">
+          <input id="quantity-3" type="range" min="1" max="100" value="30">
 
           <label for="opacity-3">Opacity</label>
-          <input id="opacity-3" type="range" min="1" max="100" value="95">
+          <input id="opacity-3" type="range" min="1" max="100" value="70">
 
           <label for="size-3">Size</label>
-          <input id="size-3" type="range" min="1" max="100" value="60">
+          <input id="size-3" type="range" min="1" max="100" value="65">
 
           <label for="speed-3">Speed</label>
           <input id="speed-3" type="range" min="5" max="100" value="60">
@@ -83,16 +83,16 @@
           <h3>Layer 4</h3>
 
           <label for="quantity-4">Quantity</label>
-          <input id="quantity-4" type="range" min="1" max="100" value="25">
+          <input id="quantity-4" type="range" min="1" max="100" value="30">
 
           <label for="opacity-4">Opacity</label>
-          <input id="opacity-4" type="range" min="1" max="100" value="95">
+          <input id="opacity-4" type="range" min="1" max="100" value="65">
 
           <label for="size-4">Size</label>
-          <input id="size-4" type="range" min="1" max="100" value="30">
+          <input id="size-4" type="range" min="1" max="100" value="70">
 
           <label for="speed-4">Speed</label>
-          <input id="speed-4" type="range" min="5" max="100" value="70">
+          <input id="speed-4" type="range" min="5" max="100" value="50">
 
           <label for="color-4">Color</label>
           <input id="color-4" class="color-input" type="color" value="#ffffff">
